Prevent horizontal scrolling on the body

--- a/src/ui/scss/layouts/_site.scss
+++ b/src/ui/scss/layouts/_site.scss
@@ -29,6 +29,7 @@ $_site--gutter: 5%;
 .l--site__body {
   background-color: #fff;
   padding: 0 $_site--gutter;
+  overflow-x: hidden;
 }
 
 .l--site__body__content {
